--- a/Source/Core/UICommon/CMakeLists.txt
+++ b/Source/Core/UICommon/CMakeLists.txt
@@ -11,10 +11,10 @@ add_dolphin_library(uicommon "${SRCS}" "${LIBS}")
 
 if(ENABLE_LLVM)
   find_package(LLVM CONFIG QUIET)
-  if(LLVM_FOUND)
+  if(LLVM_FOUND AND TARGET LLVM)
     message(STATUS "LLVM found, enabling LLVM support in disassembler")
     target_compile_definitions(uicommon PRIVATE HAVE_LLVM)
-    target_link_libraries(uicommon PRIVATE ${LLVM_AVAILABLE_LIBS})
+    target_link_libraries(uicommon PRIVATE LLVM)
     target_include_directories(uicommon PRIVATE ${LLVM_INCLUDE_DIRS})
   endif()
 endif()
