--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -9,7 +9,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Windows")
   add_definitions(-D_UNICODE)
   add_definitions(-DWIN32_LEAN_AND_MEAN)
   add_definitions(-D_WIN32_WINNT=0x0602)
-  add_definitions(-D_SECURE_SCL=0)
+  add_definitions(-D_SCL_SECURE_NO_WARNINGS)
   add_definitions(-D_CRT_SECURE_NO_WARNINGS)
   add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
 endif()
