IOS: Separate net/kd code out from Net.cpp
Net.cpp is just a huge glob of network related things, this separates the
KD portion out to make things a little more manageable.

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -148,10 +148,12 @@ set(SRCS	ActionReplay.cpp
 			IOS/FS/FS.cpp
 			IOS/Network/Config.cpp
 			IOS/Network/ICMPLin.cpp
-			IOS/Network/NWC24Config.cpp
 			IOS/Network/Socket.cpp
 			IOS/Network/Net.cpp
 			IOS/Network/SSL.cpp
+			IOS/Network/KD/NetKDRequest.cpp
+			IOS/Network/KD/NetKDTime.cpp
+			IOS/Network/KD/NWC24Config.cpp
 			IOS/SDIO/SDIOSlot0.cpp
 			IOS/STM/STM.cpp
 			IOS/USB/Common.cpp
