--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -180,8 +180,9 @@
     <ClCompile Include="IOS\FS\FS.cpp" />
     <ClCompile Include="IOS\Network\Config.cpp" />
     <ClCompile Include="IOS\Network\ICMPLin.cpp" />
-    <ClCompile Include="IOS\Network\Socket.cpp" />
+    <ClCompile Include="IOS\Network\MACUtils.cpp" />
     <ClCompile Include="IOS\Network\Net.cpp" />
+    <ClCompile Include="IOS\Network\Socket.cpp" />
     <ClCompile Include="IOS\Network\SSL.cpp" />
     <ClCompile Include="IOS\Network\KD\NetKDRequest.cpp" />
     <ClCompile Include="IOS\Network\KD\NetKDTime.cpp" />
@@ -420,8 +421,9 @@
     <ClInclude Include="IOS\Network\Config.h" />
     <ClInclude Include="IOS\Network\ICMPLin.h" />
     <ClInclude Include="IOS\Network\ICMP.h" />
-    <ClInclude Include="IOS\Network\Socket.h" />
+    <ClInclude Include="IOS\Network\MACUtils.h" />
     <ClInclude Include="IOS\Network\Net.h" />
+    <ClInclude Include="IOS\Network\Socket.h" />
     <ClInclude Include="IOS\Network\SSL.h" />
     <ClInclude Include="IOS\Network\KD\NetKDRequest.h" />
     <ClInclude Include="IOS\Network\KD\NetKDTime.h" />
