IOS Network: Split wd/command code into its own source files

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -148,7 +148,6 @@ set(SRCS	ActionReplay.cpp
 			IOS/FS/FS.cpp
 			IOS/Network/ICMPLin.cpp
 			IOS/Network/MACUtils.cpp
-			IOS/Network/Net.cpp
 			IOS/Network/Socket.cpp
 			IOS/Network/SSL.cpp
 			IOS/Network/IP/Top.cpp
@@ -157,6 +156,7 @@ set(SRCS	ActionReplay.cpp
 			IOS/Network/KD/NWC24Config.cpp
 			IOS/Network/NCD/Config.cpp
 			IOS/Network/NCD/Manage.cpp
+			IOS/Network/WD/Command.cpp
 			IOS/SDIO/SDIOSlot0.cpp
 			IOS/STM/STM.cpp
 			IOS/USB/Common.cpp
