--- a/Source/Core/InputCommon/CMakeLists.txt
+++ b/Source/Core/InputCommon/CMakeLists.txt
@@ -14,6 +14,9 @@ set(SRCS InputConfig.cpp
   ControllerEmu/ControlGroup/Slider.cpp
   ControllerEmu/ControlGroup/Tilt.cpp
   ControllerEmu/ControlGroup/Triggers.cpp
+  ControllerEmu/Setting/BackgroundInputSetting.cpp
+  ControllerEmu/Setting/BooleanSetting.cpp
+  ControllerEmu/Setting/NumericSetting.cpp
   ControllerInterface/ControllerInterface.cpp
   ControllerInterface/Device.cpp
   ControlReference/ControlReference.cpp
