CMakeLists: Normalize whitespace
Normalizes tabs to spaces to follow our codebase's indentation style.

--- a/Source/Core/UICommon/CMakeLists.txt
+++ b/Source/Core/UICommon/CMakeLists.txt
@@ -1,7 +1,9 @@
-set(SRCS CommandLineParse.cpp
-         Disassembler.cpp
-         UICommon.cpp
-         USBUtils.cpp)
+set(SRCS
+  CommandLineParse.cpp
+  Disassembler.cpp
+  UICommon.cpp
+  USBUtils.cpp
+)
 
 set(LIBS common cpp-optparse)
 if(LIBUSB_FOUND)
