--- a/Source/Core/DolphinNoGUI/CMakeLists.txt
+++ b/Source/Core/DolphinNoGUI/CMakeLists.txt
@@ -2,18 +2,10 @@ if(NOT(USE_X11 OR ENABLE_HEADLESS))
   return()
 endif()
 
-if(APPLE)
-  set(DOLPHIN_EXE_BASE Dolphin)
-else()
-  set(DOLPHIN_EXE_BASE dolphin-emu)
-endif()
-
-set(DOLPHIN_NOGUI_EXE ${DOLPHIN_EXE_BASE}-nogui)
-
 set(NOGUI_SRCS MainNoGUI.cpp)
 
 add_executable(dolphin-nogui ${NOGUI_SRCS})
-set_target_properties(dolphin-nogui PROPERTIES OUTPUT_NAME ${DOLPHIN_NOGUI_EXE})
+set_target_properties(dolphin-nogui PROPERTIES OUTPUT_NAME dolphin-emu-nogui)
 
 target_link_libraries(dolphin-nogui PRIVATE
   core
