IOS/ES: Split the ES code
ES.cpp was becoming pretty huge. This commit splits the ES code into
several files:

* Main ES (launch, UID, current title directory and title ID, etc.)
* Device identity and encryption (ID and cert, keys, encrypt/decrypt)
* Title management (imports, exports, deletions)
* Title contents (open/close/read/seek)
* Title information (titles, stored contents, TMDs)
* Views (for tickets and TMDs)

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -149,6 +149,11 @@ set(SRCS
   IOS/DI/DI.cpp
   IOS/ES/ES.cpp
   IOS/ES/Formats.cpp
+  IOS/ES/Identity.cpp
+  IOS/ES/TitleContents.cpp
+  IOS/ES/TitleInformation.cpp
+  IOS/ES/TitleManagement.cpp
+  IOS/ES/Views.cpp
   IOS/FS/FileIO.cpp
   IOS/FS/FS.cpp
   IOS/Network/ICMPLin.cpp
