IOS: Add NandUtils
This keeps the ES specific NAND code in a single place and makes it
reusable. Eventually, other ES specific code will be moved to it.

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -150,6 +150,7 @@ set(SRCS
   IOS/ES/ES.cpp
   IOS/ES/Formats.cpp
   IOS/ES/Identity.cpp
+  IOS/ES/NandUtils.cpp
   IOS/ES/TitleContents.cpp
   IOS/ES/TitleInformation.cpp
   IOS/ES/TitleManagement.cpp
