--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -21,10 +21,9 @@ android {
         targetSdkVersion 25
 
         // TODO This should be set to the Buildbot build number for release builds, and be "1" for debug builds.
-        versionCode 13
+        versionCode 1
 
-        // TODO This should be set to the string currently provided by NativeLibrary.GetVersionString().
-        versionName "0.13"
+        versionName "${getVersion()}"
     }
 
     signingConfigs {
@@ -71,14 +70,18 @@ android {
     }
 }
 
+ext {
+    androidSupportVersion = '25.2.0'
+}
+
 dependencies {
-    compile 'com.android.support:support-v13:25.3.0'
-    compile 'com.android.support:cardview-v7:25.3.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
+    compile "com.android.support:support-v13:$androidSupportVersion"
+    compile "com.android.support:cardview-v7:$androidSupportVersion"
+    compile "com.android.support:recyclerview-v7:$androidSupportVersion"
+    compile "com.android.support:design:$androidSupportVersion"
 
     // Android TV UI libraries.
-    compile 'com.android.support:leanback-v17:25.3.0'
+    compile "com.android.support:leanback-v17:$androidSupportVersion"
 
     // For showing the banner as a circle a-la Material Design Guidelines
     compile 'de.hdodenhof:circleimageview:2.1.0'
@@ -88,4 +91,8 @@ dependencies {
 
     // Allows FRP-style asynchronous operations in Android.
     compile 'io.reactivex:rxandroid:1.2.1'
+}
+
+def getVersion() {
+    return 'git describe --abbrev=0'.execute([], project.rootDir).text.trim()
 }
