Use different git command for version name

--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -94,5 +94,7 @@ dependencies {
 }
 
 def getVersion() {
-    return 'git describe --abbrev=0'.execute([], project.rootDir).text.trim()
+    return 'git describe --always --long'.execute([], project.rootDir).text
+            .trim()
+            .replaceAll(/(-0)?-[^-]+$/, "")
 }
