--- a/Source/Core/AudioCommon/CMakeLists.txt
+++ b/Source/Core/AudioCommon/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SRCS
   AudioCommon.cpp
+  CubebStream.cpp
   DPL2Decoder.cpp
   Mixer.cpp
   WaveFile.cpp
@@ -76,4 +77,4 @@ elseif(APPLE)
   target_sources(audiocommon PRIVATE CoreAudioSoundStream.cpp)
 endif()
 
-target_link_libraries(audiocommon PRIVATE SoundTouch)
+target_link_libraries(audiocommon PRIVATE cubeb SoundTouch)
