--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -68,6 +68,14 @@ android {
             }
         }
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            def name = output.outputFile.name.replace(variant.buildType.name, "${variant.versionName}")
+            name = name.replace("app", "dolphin")
+            output.outputFile = new File(output.outputFile.parent, name)
+        }
+    }
 }
 
 ext {
