--- a/Source/Core/DolphinWX/CMakeLists.txt
+++ b/Source/Core/DolphinWX/CMakeLists.txt
@@ -105,11 +105,11 @@ if(WIN32)
 endif()
 
 add_executable(dolphin-emu ${SRCS})
-target_link_libraries(dolphin-emu ${LIBS})
+target_link_libraries(dolphin-emu PRIVATE ${LIBS})
 
 if(USE_X11)
   find_package(GTK2 REQUIRED)
-  target_link_libraries(dolphin-emu ${GTK2_LIBRARIES})
+  target_link_libraries(dolphin-emu PRIVATE ${GTK2_LIBRARIES})
   target_include_directories(dolphin-emu PRIVATE ${GTK2_INCLUDE_DIRS})
 endif()
 
