--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -326,18 +326,21 @@ elseif(UNIX)
 endif()
 
 # Bluez doesn't support all the communication modes on FreeBSD, so only using it on Linux
-if(ENABLE_BLUEZ AND CMAKE_SYSTEM_NAME MATCHES "Linux")
-  find_package(BlueZ)
-  if(BLUEZ_FOUND)
-    message(STATUS "BlueZ found, enabling bluetooth support")
-    set(SRCS ${SRCS} HW/WiimoteReal/IOLinux.cpp)
-    set(LIBS ${LIBS} BlueZ::BlueZ)
-    add_definitions(-DHAVE_BLUEZ=1)
+if(CMAKE_SYSTEM_NAME MATCHES "Linux")
+  option(ENABLE_BLUEZ "Enables bluetooth support" ON)
+  if(ENABLE_BLUEZ)
+    find_package(BlueZ)
+    if(BLUEZ_FOUND)
+      message(STATUS "BlueZ found, enabling bluetooth support")
+      set(SRCS ${SRCS} HW/WiimoteReal/IOLinux.cpp)
+      set(LIBS ${LIBS} BlueZ::BlueZ)
+      add_definitions(-DHAVE_BLUEZ=1)
+    else()
+      message(STATUS "BlueZ NOT found, disabling bluetooth support")
+    endif()
   else()
-    message(STATUS "BlueZ NOT found, disabling bluetooth support")
+    message(STATUS "BlueZ explicitly disabled, disabling bluetooth support")
   endif()
-else()
-  message(STATUS "BlueZ explicitly disabled, disabling bluetooth support")
 endif()
 
 if(HIDAPI_FOUND)
