Qt: Add General Pane to Settings
Replace SConfig references with Settings()

--- a/Source/Core/DolphinQt2/CMakeLists.txt
+++ b/Source/Core/DolphinQt2/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SRCS
   GameList/GameTracker.cpp
   GameList/ListProxyModel.cpp
   GameList/TableDelegate.cpp
+  Settings/GeneralPane.cpp
   Settings/InterfacePane.cpp
 )
 
