--- a/Source/Core/DolphinQt2/DolphinQt2.vcxproj.filters
+++ b/Source/Core/DolphinQt2/DolphinQt2.vcxproj.filters
@@ -91,6 +91,10 @@
     <ClCompile Include="$(QtMocOutPrefix)InDevelopmentWarning.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="Settings\GeneralPane.cpp">
+      <Filter>Settings</Filter>
+    </ClCompile>
+    <ClCompile Include="$(QtMocOutPrefix)GeneralPane.cpp">
     <ClCompile Include="Settings/InterfacePane.cpp">
       <Filter>Settings</Filter>
     </ClCompile>
@@ -130,6 +134,7 @@
     <QtMoc Include="Config\FilesystemWidget.h" />
     <QtMoc Include="Config\InfoWidget.h" />
     <QtMoc Include="InDevelopmentWarning.h" />
+    <QtMoc Include="Settings\GeneralPane.h">
     <QtMoc Include="Settings\InterfacePane.h">
       <Filter>Settings</Filter>
     </QtMoc>
