--- a/Source/Core/DolphinWX/DolphinWX.vcxproj.filters
+++ b/Source/Core/DolphinWX/DolphinWX.vcxproj.filters
@@ -444,9 +444,9 @@
     <ClInclude Include="Config\PathConfigPane.h">
       <Filter>GUI\Config</Filter>
     </ClInclude>
-    <ClCompile Include="Config\AddUSBDeviceDiag.h">
+    <ClInclude Include="Config\AddUSBDeviceDiag.h">
       <Filter>GUI\Config</Filter>
-    </ClCompile>
+    </ClInclude>
     <ClInclude Include="Config\AdvancedConfigPane.h">
       <Filter>GUI\Config</Filter>
     </ClInclude>
